# zoomies

./: Cargo.toml  LICENSE  README.md  flake.nix  module.nix  package.nix
src/: main.rs
